fixed htmldisplayer overflow

--- a/src/app/components/1_registerOptions-Component/html-displayer/html-displayer.component.scss
+++ b/src/app/components/1_registerOptions-Component/html-displayer/html-displayer.component.scss
@@ -1,6 +1,11 @@
-.content {
+.html-displayer-content {
   width: 100%;
-  height: 100%;
+  height: calc(100% - 54px);
+  overflow: auto;
+  display: flex;
+  align-items: safe center;
+  justify-content: safe center;
+  word-wrap: break-word;
 }
 
 .ql-container {
